erDiagram
    USERS ||--o{ EVENTS : creates
    CATEGORIES ||--o{ EVENTS : classifies
    EVENTS ||--o{ COMMENTS : has
    USERS ||--o{ COMMENTS : writes
    COMMENTS ||--o{ COMMENTS : replies_to

    USERS {
        bigint id PK
        string name
        string email
        string password
        string avatar
        string avatar_choice
        timestamp created_at
        timestamp updated_at
    }

    CATEGORIES {
        bigint id PK
        string name
        string slug UK
        string color_code
        timestamp created_at
        timestamp updated_at
    }

    EVENTS {
        bigint id PK
        bigint user_id FK
        bigint category_id FK
        string title
        datetime event_date
        string location
        text description
        timestamp created_at
        timestamp updated_at
    }

    COMMENTS {
        bigint id PK
        bigint event_id FK
        bigint user_id FK
        bigint parent_id FK
        text body
        timestamp created_at
        timestamp updated_at
    }
